utilities/objects/Debug_Log__c/Debug_Log__c.object-meta.xml
<CustomObject>
    <description>Logger's durable sink and the retention framework's default target. Error-severity Logger entries persist one row here (system-mode insert); LogCleanupBatch purges rows past the Log_Clean_Up__mdt retention window unless Do_Not_Delete__c is checked.</description>
    <label>Debug Log</label>
    <nameField>
        <displayFormat>DL-{00000000}</displayFormat>
        <label>Debug Log Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Debug Logs</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>