utilities/objects/Debug_Log__c/fields/Class_Name__c.field-meta.xml
<CustomField>
    <fullName>Class_Name__c</fullName>
    <label>Class Name</label>
    <type>Text</type>
    <length>255</length>
    <description>Apex class the log entry originated from, as reported by the caller.</description>
</CustomField>