utilities/objects/Debug_Log__c/fields/Do_Not_Delete__c.field-meta.xml
<CustomField>
    <fullName>Do_Not_Delete__c</fullName>
    <label>Do Not Delete</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
    <description>Retention framework opt-out contract field: when checked, LogCleanupBatch never purges this row regardless of age. Every object configured in Log_Clean_Up__mdt must carry this checkbox.</description>
</CustomField>