utilities/objects/Debug_Log__c/fields/Message__c.field-meta.xml
<CustomField>
    <fullName>Message__c</fullName>
    <label>Message</label>
    <type>LongTextArea</type>
    <length>32768</length>
    <description>Full log payload. For exceptions this carries the exception type name, message, and stack trace; Logger truncates anything longer than the field.</description>
</CustomField>