utilities/objects/Debug_Log__c/fields/Method_Name__c.field-meta.xml
<CustomField>
    <fullName>Method_Name__c</fullName>
    <label>Method Name</label>
    <type>Text</type>
    <length>255</length>
    <description>Method the log entry originated from, as reported by the caller.</description>
</CustomField>